Issue Fix: Misaligned reply preview in thread composer (#9977)

--- a/res/css/views/rooms/_ReplyPreview.pcss
+++ b/res/css/views/rooms/_ReplyPreview.pcss
@@ -26,7 +26,7 @@ limitations under the License.
         display: flex;
         flex-flow: column;
         row-gap: $spacing-8;
-        padding: $spacing-8 $spacing-8 0 $spacing-8;
+        padding: $spacing-8 $spacing-8 0 0;
 
         .mx_ReplyPreview_header {
             display: flex;
